--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,5 +54,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://nervous-chili-84c45.netlify.app"
 }
