--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,7 +3,7 @@
     "path_prefix": "/",
     "favicon": "images/avatar.png",
     "header": {
-        "title": "Stackbit Vanilla",
+        "title": "trueblueidea",
         "has_nav": true,
         "nav_links": [
             {
